--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container" data-aos="fade-in">
-      <h1>Welcome to Flexor</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
+      <h1>Lingtics</h1>
+      <h2>Inteligencia artificial y lenguaje</h2>
       <div class="d-flex align-items-center">
         <i class="bx bxs-right-arrow-alt get-started-icon"></i>
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+        <a href="#about" class="btn-get-started scrollto">¡Empezemos!</a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -119,7 +119,7 @@
         <div class="row">
           <div class="col-xl-4 col-lg-5" data-aos="fade-up">
             <div class="content">
-              <h3>Why Choose Flexor for your company website?</h3>
+              <h3>¿Por qué seleccionar los servicios de Lingtics?</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
