--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     <div class="container d-flex justify-content-between">
       <div class="contact-info">
         <ul>
-          <li><i class="icofont-envelope"></i><a href="mailto:contact@example.com">contact@example.com</a></li>
-          <li><i class="icofont-phone"></i> +1 5589 55488 55</li>
+          <li><i class="icofont-envelope"></i><a href="mailto:amontenegrot@lingtics.com">contact@lingtics.com</a></li>
+          <li><i class="icofont-phone"></i><a href="tel: +573193391020">(+57) 319 339 10 20</a></li>
           <li><i class="icofont-clock-time icofont-flip-horizontal"></i> Mon-Fri 9am - 5pm</li>
         </ul>
 
       </div>
       <div class="cta">
-        <a href="#about" class="scrollto">Get Started</a>
+        <a href="#about" class="scrollto">¡Conócenos!</a>
       </div>
     </div>
   </section>
@@ -59,7 +59,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Flexor</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Lingtics</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
