--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Lingtics</title>
+  <title>Lingtics - Lenguaje e inteligencia artificial</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,14 +42,14 @@
     <div class="container d-flex justify-content-between">
       <div class="contact-info">
         <ul>
-          <li><i class="icofont-envelope"></i><a href="mailto:amontenegrot@lingtics.com">contact@lingtics.com</a></li>
-          <li><i class="icofont-phone"></i><a href="tel: +573193391020">(+57) 319 339 10 20</a></li>
-          <li><i class="icofont-clock-time icofont-flip-horizontal"></i> Mon-Fri 9am - 5pm</li>
+          <li><i class="icofont-envelope"></i><a href="mailto:contact@example.com">contact@example.com</a></li>
+          <li><i class="icofont-phone"></i>(+57) 319 339 10 20</li>
+          <li><i class="icofont-clock-time icofont-flip-horizontal"></i> Lunes-Viernes 8am - 6pm</li>
         </ul>
 
       </div>
       <div class="cta">
-        <a href="#about" class="scrollto">¡Conócenos!</a>
+        <a href="#about" class="scrollto">Get Started</a>
       </div>
     </div>
   </section>
@@ -101,11 +101,11 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container" data-aos="fade-in">
-      <h1>Lingtics</h1>
-      <h2>Inteligencia artificial y lenguaje</h2>
+      <h1>Welcome to Lingtics</h1>
+      <h2>We are team of talanted designers making websites with Bootstrap</h2>
       <div class="d-flex align-items-center">
         <i class="bx bxs-right-arrow-alt get-started-icon"></i>
-        <a href="#about" class="btn-get-started scrollto">¡Empezemos!</a>
+        <a href="#about" class="btn-get-started scrollto">Get Started</a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -119,7 +119,7 @@
         <div class="row">
           <div class="col-xl-4 col-lg-5" data-aos="fade-up">
             <div class="content">
-              <h3>¿Por qué seleccionar los servicios de Lingtics?</h3>
+              <h3>Why Choose Lingtics for your company website?</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
@@ -819,7 +819,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Flexor</h3>
+            <h3>Lingtics</h3>
             <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
@@ -867,7 +867,7 @@
 
       <div class="me-lg-auto text-center text-lg-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Flexor</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Lingtics</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
@@ -878,11 +878,13 @@
         </div>
       </div>
       <div class="social-links text-center text-lg-right pt-3 pt-lg-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="LinkedIn"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="Twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="Facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="Instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="Whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="#" class="Telegram"><i class="bx bxl-telegram"></i></a>
+        <a href="#" class="Signal"><i class="cib:signal"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -900,6 +902,8 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
 
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+  
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
