--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="es">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8">  <!-- Cofificación de la página -->
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">  <!-- Diseño Responsive -->
+  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'/> <!-- Compatiilidad con navegador Explorer -->
+  <meta content='Lingtics' name='author'/> <!-- Facilita el contacto con el autor -->
 
-  <title>Lingtics - Lenguaje e inteligencia artificial</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Lingtics | Lenguaje e inteligencia artificial</title>
+  <meta content="Servicios y soluciones de Inteligencia Artificial basada en Lingüística computacional y Neurociencias cognitivas enfocados a rentabilizar su negocio." name="description">
+  <meta content="servicios, inteligencia artificial, lenguaje, tecnología, empresa, negocio" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -42,14 +44,14 @@
     <div class="container d-flex justify-content-between">
       <div class="contact-info">
         <ul>
-          <li><i class="icofont-envelope"></i><a href="mailto:contact@example.com">contact@example.com</a></li>
-          <li><i class="icofont-phone"></i>(+57) 319 339 10 20</li>
-          <li><i class="icofont-clock-time icofont-flip-horizontal"></i> Lunes-Viernes 8am - 6pm</li>
+          <li><i class="icofont-envelope"></i><a href="mailto:contact@example.com">contacto@lingtics.com</a></li>
+          <li><i class="icofont-phone"></i><a href="tel:+573193391020">(+57) 319 339 10 20</a></li>
+          <li><i class="icofont-clock-time icofont-flip-horizontal"></i> Lunes - viernes 8am - 5pm</li>
         </ul>
 
       </div>
       <div class="cta">
-        <a href="#about" class="scrollto">Get Started</a>
+        <a href="#about" class="scrollto">Conózcanos</a>
       </div>
     </div>
   </section>
@@ -59,9 +61,9 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Lingtics</span></a></h1>
+        <!-- <h1 class="text-light"><a href="index.html"><span>Lingtics</span></a></h1>-->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -105,7 +107,7 @@
       <h2>We are team of talanted designers making websites with Bootstrap</h2>
       <div class="d-flex align-items-center">
         <i class="bx bxs-right-arrow-alt get-started-icon"></i>
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+        <a href="#contact" class="btn-get-started scrollto">Obtenga su plan personalizado</a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -119,10 +121,12 @@
         <div class="row">
           <div class="col-xl-4 col-lg-5" data-aos="fade-up">
             <div class="content">
-              <h3>Why Choose Lingtics for your company website?</h3>
+              <h3>¿Por qué escoger Lingtics?</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+                En Lingtics aportamos valor y rentabilidad a su empresa al integrar Inteligencia Artificial, Lingüística 
+                y Neurociencia Cognitiva en todos nuestros servicios. Además, nuestras soluciones cuentan con 
+                el respaldo y calidad que solo grandes compañías pueden ofrecer, pues nuestras tecnologías 
+                son soportadas por Google, Amazon y Microsoft.
               </p>
               <div class="text-center">
                 <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
@@ -134,23 +138,23 @@
               <div class="row">
                 <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Corporis voluptates sit</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                    <i class="bx bx-bot"></i>
+                    <h4>Inteligencia Artificial</h4>
+                    <p>Área de las ciencias computacionales encargada de estudiar modelos de cómputo capaces de realizar actividades propias de los seres humanos.</p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Ullamco laboris ladore pan</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                    <i class="bx bx-paragraph"></i>
+                    <h4>Lingüística<br><br></h4>
+                    <p>Ciencia que estudia el lenguaje humano buscando especificar la naturaleza del mismo a tarvés de la identificación, descripción y explicación.</p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-images"></i>
-                    <h4>Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                    <i class="bx bx-brain"></i>
+                    <h4>Neurociencia cognitiva</h4>
+                    <p>Disciplina científica que estudia los mecanismos cerebrales implicados en los procesos psicológicos que caracterizan la cognición humana.</p>
                   </div>
                 </div>
               </div>
@@ -171,7 +175,7 @@
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-            <h4 data-aos="fade-up">About us</h4>
+            <h4 data-aos="fade-up">Sobre nosotros</h4>
             <h3 data-aos="fade-up">Enim quis est voluptatibus aliquid consequatur fugiat</h3>
             <p data-aos="fade-up">Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>
 
@@ -884,7 +888,7 @@
         <a href="#" class="Instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="Whatsapp"><i class="bx bxl-whatsapp"></i></a>
         <a href="#" class="Telegram"><i class="bx bxl-telegram"></i></a>
-        <a href="#" class="Signal"><i class="cib:signal"></i></a>
+        <a href="#" class="Signal"><i class="cib-signal"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -901,8 +905,6 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
-
-  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
