--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                 <div class="row justify-content-center">
                                     <div class="col">
                                         <div class="title-heading position-relative mt-4 text-center" style="z-index: 1;">
-                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">A complete <br>Developer Toolset</h1>
+                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">Digital solutions <br>for businesses</h1>
                                             <p class="para-desc mx-auto text-white-50">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap v5 html page.</p>
                                             <div class="mt-4 pt-2">
                                                 <a href="#!" class="btn btn-primary">Learn More</a>
@@ -526,7 +526,7 @@
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
                         <div class="title-heading">
-                            <img src="images/logo-light.png" height="24" alt="">
+                            <img src="images/logo-light.png" height="104" alt="">
                             <h4 class="heading title-dark text-white my-4">World’s Leading Contract <br> Logistics Provider</h4>
                             <p class="text-white-50 para-dark para-desc mx-auto">Start working with Lingtics that can provide everything you need to generate awareness, drive traffic, connect.</p>
                             <a href="#!" data-type="youtube" data-id="yba7hPeTSjk" class="play-btn border border-light mt-4 lightbox">
@@ -784,7 +784,7 @@
                                         </div>
                                         <div class="content mt-4">
                                             <h5 class="footer-head">Location</h5>
-                                            <p class="text-muted">Carrera 45 # 26 - 85, <br>Bogotá D.C., COL 110921</p>
+                                            <p class="text-muted">Carrera 45 # 26 - 85 <br>Bogotá D.C., COL 110921</p>
                                             <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39206.002432144705!2d-95.4973981212445!3d29.709510002925988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c16de81f3ca5%3A0xf43e0b60ae539ac9!2sGerald+D.+Hines+Waterwall+Park!5e0!3m2!1sen!2sin!4v1566305861440!5m2!1sen!2sin"
                                                 data-type="iframe" class="video-play-icon text-foot lightbox">View on Google map</a>
                                         </div>
