--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-12 text-center">
-                                <span class="clip-text clip-text-image text-uppercase fw-bold">Lingtics.</span>
+                                <span class="clip-text clip-text-image text-uppercase fw-bold">Lingtics</span>
                             </div><!--end col-->
                         </div><!--end row-->
                     </div><!--end container-->
@@ -759,7 +759,7 @@
                                         <div class="content mt-4">
                                             <h5 class="footer-head">Phone</h5>
                                             <p class="text-muted">Start working with Lingtics that can provide everything</p>
-                                            <a href="tel:+601-555-22-34" class="text-foot">+601-555-22-34</a>
+                                            <a href="tel:6017317210" class="text-foot">731 72 10</a>
                                         </div>
                                     </div>
                                 </div><!--end col-->
@@ -784,8 +784,8 @@
                                         </div>
                                         <div class="content mt-4">
                                             <h5 class="footer-head">Location</h5>
-                                            <p class="text-muted">Carrera 45 # 26 - 85 <br>Bogotá D.C., COL 110921</p>
-                                            <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39206.002432144705!2d-95.4973981212445!3d29.709510002925988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c16de81f3ca5%3A0xf43e0b60ae539ac9!2sGerald+D.+Hines+Waterwall+Park!5e0!3m2!1sen!2sin!4v1566305861440!5m2!1sen!2sin"
+                                            <p class="text-muted">Carrera 102 # 16F - 72 <br>Bogotá D.C., COL 110921</p>
+                                            <a href="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3976.557400912241!2d-74.14900388958833!3d4.672703777021891!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sco!4v1639420254340!5m2!1ses!2sco"
                                                 data-type="iframe" class="video-play-icon text-foot lightbox">View on Google map</a>
                                         </div>
                                     </div>
