--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <head>
         <meta charset="utf-8" />
-        <title>Lingtics | Language + AI</title>
+        <title>Lingtics | Tecnologías lingüísticas</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Premium Bootstrap 5 Landing Page Template" />
-        <meta name="keywords" content="saas, language, ai, NLP, computational linguistics" />
+        <meta name="description" content="Servicios tecnológicos basados en inteligencia artificial para el procesamiento del lenguaje natural." />
+        <meta name="keywords" content="analisis, lenguaje, inteligencia artificial, NLP, linguistica computacional" />
         <meta name="author" content="Lingtics" />
         <meta name="email" content="contact@lingtics.com" />
         <meta name="website" content="https://lingtics.com" />
-        <meta name="Version" content="v2.1.0" />
+        <meta name="Version" content="v2.2.0" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.png">
         <!-- Bootstrap -->
@@ -241,17 +241,17 @@
                     <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="3000">
+                    <div class="carousel-item active" data-bs-interval="5000">
                         <div class="bg-home d-flex align-items-center" style="background-image:url('images/logistics/01.jpg')">
                             <div class="bg-overlay"></div>
                             <div class="container">
                                 <div class="row justify-content-center">
                                     <div class="col">
                                         <div class="title-heading position-relative mt-4 text-center" style="z-index: 1;">
-                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">Linguistics, Neuroscience <br>and Artificial Intelligence</h1>
-                                            <p class="para-desc mx-auto text-white-50">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap v5 html page.</p>
+                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">Lingüística, Neurociencia e <br>Inteligencia Artificial</h1>
+                                            <p class="para-desc mx-auto text-white-50">Nuestras tecnologías se centran en entender el lenguaje humano de forma similar a como lo hacen nuestros cerebros.</p>
                                             <div class="mt-4 pt-2">
-                                                <a href="#!" class="btn btn-primary">Learn More</a>
+                                                <a href="#!" class="btn btn-primary">Leer más</a>
                                             </div>
                                         </div>
                                     </div><!--end col-->
@@ -260,17 +260,17 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item" data-bs-interval="3000">
+                    <div class="carousel-item" data-bs-interval="7500">
                         <div class="bg-home d-flex align-items-center" style="background-image:url('images/logistics/02.jpg')">
                             <div class="bg-overlay"></div>
                             <div class="container">
                                 <div class="row justify-content-center">
                                     <div class="col">
                                         <div class="title-heading position-relative mt-4 text-center" style="z-index: 1;">
-                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">Lingtics as<br> an AI company</h1>
-                                            <p class="para-desc mx-auto text-white-50">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap v5 html page.</p>
+                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">Mucho más allá de un <br>analisis superficial</h1>
+                                            <p class="para-desc mx-auto text-white-50">Analizamos el contexto global lingüístico, permitiendo entender con mayor precisión la intención, el sentimiento, la categoría y los temas clave.</p>
                                             <div class="mt-4 pt-2">
-                                                <a href="#!" class="btn btn-primary">Learn More</a>
+                                                <a href="#!" class="btn btn-primary">Leer más</a>
                                             </div>
                                         </div>
                                     </div><!--end col-->
@@ -279,17 +279,17 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item" data-bs-interval="3000">
+                    <div class="carousel-item" data-bs-interval="7000">
                         <div class="bg-home d-flex align-items-center" style="background-image:url('images/logistics/03.jpg')">
                             <div class="bg-overlay"></div>
                             <div class="container">
                                 <div class="row justify-content-center">
                                     <div class="col">
                                         <div class="title-heading position-relative mt-4 text-center" style="z-index: 1;">
-                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">Digital solutions <br>for businesses</h1>
-                                            <p class="para-desc mx-auto text-white-50">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap v5 html page.</p>
+                                            <h1 class="fw-bold display-4 text-white title-dark mb-3">Soluciones digitales para <br> empresas</h1>
+                                            <p class="para-desc mx-auto text-white-50">Benefíciese de tecnologías del lenguaje que pueden aportar valor y mejorar la rentabilidad de su negocio.</p>
                                             <div class="mt-4 pt-2">
-                                                <a href="#!" class="btn btn-primary">Learn More</a>
+                                                <a href="#!" class="btn btn-primary">Leer más</a>
                                             </div>
                                         </div>
                                     </div><!--end col-->
@@ -312,16 +312,16 @@
                                 <div class="col-md-6 col-12">
                                     <div class="card features fea-primary rounded shadow p-4 bg-white position-relative overflow-hidden border-0">
                                         <span class="h2 icon2 text-primary">
-                                            <i class="uil uil-truck"></i>
+                                            <i class="mdi mdi-waveform"></i>
                                         </span>
                                         <div class="card-body p-0 content">
-                                            <h5 class="mb-3">Speech Analytics</h5>
+                                            <h5 class="mb-3">Análisis de audio</h5>
                                             <p class="para text-muted mb-3">If the distribution of letters and 'words' is random, the reader from making a neutral judgement</p>
                                             
-                                            <a href="javascript:void(0)" class="readmore text-dark">Read More <i class="uil uil-angle-right align-middle"></i></a>
+                                            <a href="javascript:void(0)" class="readmore text-dark">Leer más <i class="uil uil-angle-right align-middle"></i></a>
                                         </div>
                                         <div class="position-absolute top-0 end-0">
-                                            <i class="uil uil-truck display-1 opacity-05"></i>
+                                            <i class="mdi mdi-waveform display-1 opacity-05"></i>
                                         </div>
                                     </div>
                                 </div><!--end col-->
@@ -329,16 +329,16 @@
                                 <div class="col-md-6 col-12">
                                     <div class="card features fea-primary rounded shadow p-4 bg-white position-relative overflow-hidden border-0">
                                         <span class="h2 icon2 text-primary">
-                                            <i class="uil uil-parcel"></i>
+                                            <i class="mdi mdi-alphabet-latin"></i>
                                         </span>
                                         <div class="card-body p-0 content">
-                                            <h5 class="mb-3">Text Analytics</h5>
+                                            <h5 class="mb-3">Análisis de texto</h5>
                                             <p class="para text-muted mb-3">If the distribution of letters and 'words' is random, the reader from making a neutral judgement</p>
                                             
-                                            <a href="javascript:void(0)" class="readmore text-dark">Read More <i class="uil uil-angle-right align-middle"></i></a>
+                                            <a href="javascript:void(0)" class="readmore text-dark">Leer más <i class="uil uil-angle-right align-middle"></i></a>
                                         </div>
                                         <div class="position-absolute top-0 end-0">
-                                            <i class="uil uil-parcel display-1 opacity-05"></i>
+                                            <i class="mdi mdi-alphabet-latin display-1 opacity-05"></i>
                                         </div>
                                     </div>
                                 </div><!--end col-->
@@ -363,10 +363,10 @@
 
                     <div class="col-lg-7 col-md-7 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title ms-lg-4">
-                            <h6>About us</h6>
-                            <h4 class="title mb-4">Powerful Features of <br> <span class="text-primary">Lingtics</span> Linguistics</h4>
-                            <p class="text-muted">Start working with <span class="text-primary fw-bold">Lingtics</span> that can provide everything you need to generate awareness, drive traffic, connect. Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy texts have been in use by typesetters since the 16th century.</p>
-                            <a href="javascript:void(0)" class="btn btn-primary mt-3">Read More <i class="uil uil-angle-right-b"></i></a>
+                            <h6>Sobre Nosotros</h6>
+                            <h4 class="title mb-4"><span class="text-primary">Multidisciplinariedad, </span> <span class="text-primary">ciencia</span> e <span class="text-primary">innovación.</span><br></h4>
+                            <p class="text-muted"><span class="text-primary fw-bold">Lingtics</span> es una compañía digital especializada en el diseño de metodologías de procesamiento del lenguaje natural y la construcción de tecnologías del lenguaje que implementan inteligencia artificial, lingüística y neurociencia cognitiva con el fin de aportar valor y rentabilidad a sus prácticas corporativas.</p>
+                            <a href="javascript:void(0)" class="btn btn-primary mt-3">Leer más <i class="uil uil-angle-right-b"></i></a>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
@@ -518,6 +518,31 @@
             </div><!--end container-->
         </section><!--end section-->
         <!-- End -->
+
+        <div class="container-fluid mt-100 mt-60">
+            <div class="rounded-md bg-primary py-5 px-4">
+                <div class="row py-md-5 py-4">
+                    <div class="container">
+                        <div class="row justify-content-center align-items-center">
+                            <div class="col-lg-6 col-md-6 col-12">
+                                <div class="section-title">
+                                    <h6 class="text-white title-dark mb-3">Lingtics se encuentra integrada con productos y servicios de:</h6>
+                                    <h2 class="text-white title-dark mb-0">Google, Yandex y Microsoft.</h2>
+                                </div>
+                            </div><!--end col-->
+
+                            <div class="col-lg-6 col-md-6 col-12 mt-4 pt-2 mt-sm-0 pt-sm-0">
+                                <ul class="list-unstyled mb-0 ms-lg-5">
+                                    <li class="text-white-50 my-2"><i data-feather="arrow-right-circle" class="fea icon-ex-md me-1"></i> Tecnologías modernas y avanzadas</li>
+                                    <li class="text-white-50 my-2"><i data-feather="arrow-right-circle" class="fea icon-ex-md me-1"></i> Excelente soporte tecnológico</li>
+                                    <li class="text-white-50 my-2"><i data-feather="arrow-right-circle" class="fea icon-ex-md me-1"></i> Seguridad, calidad y respaldo</li>
+                                </ul>
+                            </div><!--end col-->
+                        </div><!--end row-->
+                    </div><!--end container-->
+                </div><!--end row-->
+            </div><!--end div-->
+        </div><!--end container-fluid-->
 
         <!-- Start CTA -->
         <section class="section bg-cta" style="background: url('images/logistics/cta.jpg') center;">
@@ -914,15 +939,6 @@
         </div>
         <!-- Offcanvas End -->
 
-        <!-- Cookies Start -->
-        <div class="cookie-popup bg-white shadow rounded py-3 px-4">
-            <p class="text-muted mb-0">This website uses cookies to provide you with a great user experience. By using it, you accept our <a href="https://shreethemes.in" target="_blank" class="text-success h6">use of cookies</a></p>
-            <div class="cookie-popup-actions text-end">
-                <button><i class="uil uil-times text-dark fs-4"></i></button>
-            </div>
-        </div><!--Note: Cookies Js including in plugins.init.js (path like; js/plugins.init.js) and Cookies css including in _helper.scss (path like; scss/_helper.scss)-->
-        <!-- Cookies End -->
-
         <!-- Back to top -->
         <a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top fs-5"><i data-feather="arrow-up" class="fea icon-sm icons align-middle"></i></a>
         <!-- Back to top -->
@@ -961,19 +977,14 @@
                     </li>
                 </ul>
 
-                <h6 class="title text-center pt-3 mb-0 border-top">Theme Option</h6>
+                <h6 class="title text-center pt-3 mb-0 border-top">Opciones de tema</h6>
                 <ul class="text-center list-unstyled">
                     <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary rtl-version t-rtl-light mt-2" onclick="setTheme('style-rtl')">RTL</a></li>
                     <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary ltr-version t-ltr-light mt-2" onclick="setTheme('style')">LTR</a></li>
                     <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary dark-rtl-version t-rtl-dark mt-2" onclick="setTheme('style-dark-rtl')">RTL</a></li>
                     <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary dark-ltr-version t-ltr-dark mt-2" onclick="setTheme('style-dark')">LTR</a></li>
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark dark-version t-dark mt-2" onclick="setTheme('style-dark')">Dark</a></li>
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark light-version t-light mt-2" onclick="setTheme('style')">Light</a></li>
-                </ul>
-
-                <h6 class="title text-center pt-3 mb-0 border-top">Admin</h6>
-                <ul class="text-center list-unstyled mb-0">
-                    <li><a href="javascript:void(0)" target="_blank" class="btn btn-sm btn-block btn-success mt-2">Admin Dashboard</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark dark-version t-dark mt-2" onclick="setTheme('style-dark')">Oscuro</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark light-version t-light mt-2" onclick="setTheme('style')">Claro</a></li>
                 </ul>
             </div>
             <div class="bottom">
