--- a/404.html
+++ b/404.html
@@ -46,9 +46,9 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-md-12 text-center">
                         <img src="images/404.svg" class="img-fluid" alt="">
-                        <div class="text-uppercase mt-4 display-3">Lo sentimos</div>
-                        <div class="text-capitalize text-dark mb-4 error-page">El enlace parece estar roto o haberse movido a otro sitio.</div>
-                        <p class="text-muted para-desc mx-auto">Start working with <span class="text-primary fw-bold">Lingtics</span> that can provide everything you need to generate awareness, drive traffic, connect.</p>
+                        <div class="text-uppercase mt-4 display-3">Página no encontrada</div>
+                        <div class="text-capitalize text-dark mb-4 error-page">Lo sentimos</div>
+                        <p class="text-muted para-desc mx-auto">Este enlace parece estar <span class="text-primary fw-bold">roto</span> o haberse <span class="text-primary fw-bold">movido</span> a otro sitio.</p>
                     </div><!--end col-->
                 </div><!--end row-->
 
