--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Lingtics" />
         <meta name="email" content="contact@lingtics.com" />
         <meta name="website" content="https://lingtics.com" />
-        <meta name="Version" content="v2.2.0" />
+        <meta name="version" content="v2.2.0" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.png">
         <!-- Bootstrap -->
@@ -212,7 +212,7 @@
                             </ul>
                         </li>
 
-                        <li><a href="../dashboard/index.html" target="_blank" class="sub-menu-item">Benefits</a></li>
+                        <li><a href="../blog/index.html" target="_blank" class="sub-menu-item">Benefits</a></li>
 
                         <li class="has-submenu parent-menu-item">
                             <a href="javascript:void(0)">About us</a><span class="menu-arrow"></span>
@@ -224,7 +224,7 @@
                             </ul>
                         </li>
 
-                        <li><a href="../dashboard/index.html" target="_blank" class="sub-menu-item">Blog</a></li>
+                        <li><a href="../blog/index.html" target="_blank" class="sub-menu-item">Blog</a></li>
                         
                     </ul><!--end navigation menu-->
                 </div><!--end navigation-->
