--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             </ul>
                         </li>
 
-                        <li><a href="../blog/index.html" target="_blank" class="sub-menu-item">Blog</a></li>
+                        <li><a href="../blog/" target="_blank" class="sub-menu-item">Blog</a></li>
                         
                     </ul><!--end navigation menu-->
                 </div><!--end navigation-->
