--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             </ul>
                         </li>
 
-                        <li><a href="../blog/index.html" target="_blank" class="sub-menu-item">Benefits</a></li>
+                        <li><a href="index.html" target="_blank" class="sub-menu-item">Benefits</a></li>
 
                         <li class="has-submenu parent-menu-item">
                             <a href="javascript:void(0)">About us</a><span class="menu-arrow"></span>
@@ -224,7 +224,7 @@
                             </ul>
                         </li>
 
-                        <li><a href="../blog/" target="_blank" class="sub-menu-item">Blog</a></li>
+                        <li><a href="index.html" target="_blank" class="sub-menu-item">Blog</a></li>
                         
                     </ul><!--end navigation menu-->
                 </div><!--end navigation-->
