--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </li>
                     
                     <li class="list-inline-item ps-1 mb-0">
-                        <a href="https://lingtics.com/dashboard/" target="_blank">
+                        <a href="https://lingtics.com/dashboard" target="_blank">
                             <div class="login-btn-primary"><span class="btn btn-icon btn-pills btn-primary"><i data-feather="log-in" class="fea icon-sm"></i></span></div>
                             <div class="login-btn-light"><span class="btn btn-icon btn-pills btn-light"><i data-feather="log-in" class="fea icon-sm"></i></span></div>
                         </a>
