--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </li>
                     
                     <li class="list-inline-item ps-1 mb-0">
-                        <a href="https://lingtics.com/dashboard" target="_blank">
+                        <a href="auth-login-three.html" target="_blank">
                             <div class="login-btn-primary"><span class="btn btn-icon btn-pills btn-primary"><i data-feather="log-in" class="fea icon-sm"></i></span></div>
                             <div class="login-btn-light"><span class="btn btn-icon btn-pills btn-light"><i data-feather="log-in" class="fea icon-sm"></i></span></div>
                         </a>
@@ -957,7 +957,7 @@
         <!-- Style switcher -->
         <div id="style-switcher" class="bg-light border p-3 pt-2 pb-2" onclick="toggleSwitcher()">
             <div>
-                <h6 class="title text-center">Modifica el color</h6>
+                <h6 class="title text-center">Modifique el color</h6>
                 <ul class="pattern">
                     <li class="list-inline-item">
                         <a class="color1" href="javascript: void(0);" onclick="setColor('default')"></a>
