--- a/auth-re-password-three.html
+++ b/auth-re-password-three.html
@@ -1,19 +1,19 @@
 
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
 
     <head>
         <meta charset="utf-8" />
         <title>Lingtics | Tecnologías lingüísticas</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Premium Bootstrap 5 Landing Page Template" />
-        <meta name="keywords" content="Saas, Software, multi-uses, HTML, Clean, Modern" />
-        <meta name="author" content="Shreethemes" />
-        <meta name="email" content="support@shreethemes.in" />
-        <meta name="website" content="https://shreethemes.in" />
-        <meta name="version" content="v3.8.0" />
+        <meta name="description" content="Servicios tecnológicos basados en inteligencia artificial para el procesamiento del lenguaje natural." />
+        <meta name="keywords" content="analisis, lenguaje, inteligencia artificial, NLP, linguistica computacional" />
+        <meta name="author" content="Lingtics" />
+        <meta name="email" content="contact@lingtics.com" />
+        <meta name="website" content="https://lingtics.com" />
+        <meta name="version" content="v2.2.0" />
         <!-- favicon -->
-        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="shortcut icon" href="images/favicon.png">
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <!-- Icons -->
@@ -35,37 +35,55 @@
             </div>
         </div> -->
         <!-- Loader -->
-        
-        <div class="back-to-home rounded d-none d-sm-block">
-            <a href="index.html" class="btn btn-icon btn-soft-primary"><i data-feather="home" class="icons"></i></a>
-        </div>
 
-        <!-- ERROR PAGE -->
-        <section class="bg-home d-flex align-items-center">
+        <div class="back-to-home rounded d-none d-sm-block">
+            <a href="index.html" class="btn btn-icon btn-primary"><i data-feather="home" class="icons"></i></a>
+        </div>
+        
+        <!-- Hero Start -->
+        <section class="bg-home bg-circle-gradiant d-flex align-items-center">
+            <div class="bg-overlay bg-overlay-white"></div>
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 col-md-12 text-center">
-                        <img src="images/404.svg" class="img-fluid" alt="">
-                        <div class="text-uppercase mt-4 display-3">Lo sentimos</div>  <!-- class="text-uppercase mt-4 display-3" -->
-                        <div class="text-capitalize text-dark mb-4 error-page">Página web no encontrada</div>  <!-- class="text-capitalize text-dark mb-4 error-page" -->
-                        <p class="text-muted para-desc mx-auto">Este enlace parece estar <span class="text-primary fw-bold">roto</span> o haberse <span class="text-primary fw-bold">movido</span> a otro sitio.</p>
-                    </div><!--end col-->
-                </div><!--end row-->
+                    <div class="col-lg-5 col-md-8"> 
+                        <div class="card shadow rounded border-0">
+                            <div class="card-body">
+                                <h4 class="card-title text-center">Recuperación de cuenta</h4>  
 
-                <div class="row">
-                    <div class="col-md-12 text-center">  
-                        <a href="index.html" class="btn btn-outline-primary mt-4">Regresar</a>
-                        <a href="index.html" class="btn btn-primary mt-4 ms-2">Ir al inicio</a>
+                                <form class="login-form mt-4">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <p class="text-muted">Introduzca la dirección de correo electrónico con la que inicia sesión en <span class="text-primary fw-bold">Lingtics</span>. Recibirá un enlace por este medio para crear una nueva contraseña.</p>
+                                            <div class="mb-3">
+                                                <label class="form-label">Correo electrónico <span class="text-danger">*</span></label>
+                                                <div class="form-icon position-relative">
+                                                    <i data-feather="mail" class="fea icon-sm icons"></i>
+                                                    <input type="email" class="form-control ps-5" placeholder="Ingrese su correo electrónico" name="email" required="">
+                                                </div>
+                                            </div>
+                                        </div><!--end col-->
+                                        <div class="col-lg-12">
+                                            <div class="d-grid">
+                                                <button class="btn btn-primary">Recuperar cuenta</button>
+                                            </div>
+                                        </div><!--end col-->
+                                        <div class="mx-auto">
+                                            <p class="mb-0 mt-3"><small class="text-dark me-2">Si recuerda su contraseña, <a href="auth-login-three.html" class="text-dark fw-bold">Ingrese a su cuenta aquí.</a></small></p>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
                     </div><!--end col-->
                 </div><!--end row-->
-            </div><!--end container-->
+            </div> <!--end container-->
         </section><!--end section-->
-        <!-- ERROR PAGE -->
+        <!-- Hero End -->
 
         <!-- Style switcher -->
         <div id="style-switcher" class="bg-light border p-3 pt-2 pb-2" onclick="toggleSwitcher()">
             <div>
-                <h6 class="title text-center">Modifique el color</h6>
+                <h6 class="title text-center">Select Your Color</h6>
                 <ul class="pattern">
                     <li class="list-inline-item">
                         <a class="color1" href="javascript: void(0);" onclick="setColor('default')"></a>
@@ -96,14 +114,14 @@
                     </li>
                 </ul>
 
-                <h6 class="title text-center pt-3 mb-0 border-top">Opciones de tema</h6>
+                <h6 class="title text-center pt-3 mb-0 border-top">Theme Option</h6>
                 <ul class="text-center list-unstyled">
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary rtl-version t-rtl-light mt-2" onclick="setTheme('style-rtl')">Derecha</a></li>
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary ltr-version t-ltr-light mt-2" onclick="setTheme('style')">Izquierda</a></li>
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary dark-rtl-version t-rtl-dark mt-2" onclick="setTheme('style-dark-rtl')">Derecha</a></li>
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary dark-ltr-version t-ltr-dark mt-2" onclick="setTheme('style-dark')">Izquierda</a></li>
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark dark-version t-dark mt-2" onclick="setTheme('style-dark')">Oscuro</a></li>
-                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark light-version t-light mt-2" onclick="setTheme('style')">Claro</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary rtl-version t-rtl-light mt-2" onclick="setTheme('style-rtl')">RTL</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary ltr-version t-ltr-light mt-2" onclick="setTheme('style')">LTR</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary dark-rtl-version t-rtl-dark mt-2" onclick="setTheme('style-dark-rtl')">RTL</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-primary dark-ltr-version t-ltr-dark mt-2" onclick="setTheme('style-dark')">LTR</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark dark-version t-dark mt-2" onclick="setTheme('style-dark')">Dark</a></li>
+                    <li class="d-grid"><a href="javascript:void(0)" class="btn btn-sm btn-block btn-dark light-version t-light mt-2" onclick="setTheme('style')">Light</a></li>
                 </ul>
 
                 <h6 class="title text-center pt-3 mb-0 border-top">Admin</h6>
