--- a/login.html
+++ b/login.html
@@ -131,7 +131,7 @@
         <!-- Style switcher -->
         <div id="style-switcher" class="bg-light border p-3 pt-2 pb-2" onclick="toggleSwitcher()">
             <div>
-                <h6 class="title text-center">Select Your Color</h6>
+                <h6 class="title text-center">Modifique el color</h6>
                 <ul class="pattern">
                     <li class="list-inline-item">
                         <a class="color1" href="javascript: void(0);" onclick="setColor('default')"></a>
