--- a/recuperar-cuenta.html
+++ b/recuperar-cuenta.html
@@ -53,7 +53,7 @@
                                 <form class="login-form mt-4">
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            <p class="text-muted">Introduzca la dirección de correo electrónico con la que inicia sesión en <span class="text-primary fw-bold">Lingtics</span>. Recibirá un enlace por este medio para crear una nueva contraseña.</p>
+                                            <p class="text-muted">Introduzca la dirección de correo electrónico con la que inicia sesión en <span class="text-primary fw-bold">Lingtics</span>. Recibirá un enlace por este medio para restablecer su contraseña.</p>
                                             <div class="mb-3">
                                                 <label class="form-label">Correo electrónico <span class="text-danger">*</span></label>
                                                 <div class="form-icon position-relative">
@@ -67,10 +67,10 @@
                                                 <!--<button class="btn btn-primary">Recuperar cuenta</button> -->
 
                                                 <!-- Modal Start -->
-                                                <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#login" class="btn btn-primary">Recuperar cuenta</a>
+                                                <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#re-password" class="btn btn-primary">Recuperar cuenta</a>
 
                                                 <!-- Popup Start -->
-                                                <div class="modal fade" id="login" tabindex="-1" aria-hidden="true">
+                                                <div class="modal fade" id="re-password" tabindex="-1" aria-hidden="true">
                                                     <div class="modal-dialog modal-dialog-centered">
                                                         <div class="modal-content rounded shadow border-0">
                                                             <div class="modal-body py-5">
@@ -94,26 +94,6 @@
                                                 <!-- Modal End -->
                                             </div>
 
-                                            <!-- Wishlist Popup Start -->
-                                            <div class="modal fade" id="empty-cart" tabindex="-1" aria-hidden="true">
-                                                <div class="modal-dialog modal-dialog-centered">
-                                                    <div class="modal-content rounded shadow border-0">
-                                                        <div class="modal-body py-5">
-                                                            <div class="text-center">
-                                                                <img src="images/shop/cart.png" class="avatar avatar-medium rounded-circle shadow" alt="">
-                                                                <div class="mt-4">
-                                                                    <h4>Your cart is empty.</h4>
-                                                                    <p class="text-muted">Looks like you haven't made your choice yet...</p>
-                                                                    <div class="mt-4">
-                                                                        <a href="javascript:void(0)" class="btn btn-primary">Start Shopping</a>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <!-- Wishlist Popup End -->
                                         </div><!--end col-->
                                         <div class="mx-auto">
                                             <p class="mb-0 mt-3"><small class="text-dark me-2">Si recuerda su contraseña, <a href="login.html" class="text-dark fw-bold">Ingrese a su cuenta aquí.</a></small></p>
@@ -131,7 +111,7 @@
         <!-- Style switcher -->
         <div id="style-switcher" class="bg-light border p-3 pt-2 pb-2" onclick="toggleSwitcher()">
             <div>
-                <h6 class="title text-center">Select Your Color</h6>
+                <h6 class="title text-center">Modifique el color</h6>
                 <ul class="pattern">
                     <li class="list-inline-item">
                         <a class="color1" href="javascript: void(0);" onclick="setColor('default')"></a>
